--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="container-fluid d-flex justify-content-center">
-            <div id="youtube-video-handle-click" onclick="play();">
+            <div class="container-fluid d-flex justify-content-center" onclick="play();" style="max-width: 700px; cursor: hand;">
                 <div id="youtube-video">
                     <div style="position: relative; height: 0; padding-bottom: 56.2%; padding-top: 0;">
                         <iframe class="youtube-video"
