--- a/index.html
+++ b/index.html
@@ -543,6 +543,10 @@
             </div>
         </div>
 
+        <script>
+            fbq('track', 'ViewContent');
+        </script>
+
         <div class="d-flex justify-content-center">
             <div class="col-lg-6">
                 <span class="title">Perguntas frequentes</span>
